<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="125dp"
                android:layout_height="90dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/logo" />

            <ImageView
                android:id="@+id/notifikasi"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="300dp"
                android:layout_marginTop="65dp"
                android:src="@drawable/img" />

            <ImageView
                android:id="@+id/profil"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="110dp"
                android:src="@drawable/img_1" />

            <TextView
                android:id="@+id/hai_perkenalan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="60dp"
                android:layout_marginTop="120dp"
                android:text="@string/hai"
                android:textColor="@color/purple"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/gambar_1"
                android:layout_width="match_parent"
                android:layout_height="155dp"
                android:layout_marginTop="190dp"
                android:scaleType="fitXY"
                android:src="@drawable/img_2" />

            <TextView
                android:id="@+id/text_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="210dp"
                android:text="@string/membaca"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="250dp"
                android:text="@string/sub_title"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/text_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="290dp"
                android:background="@color/purple"
                android:text="@string/gratis"
                android:textColor="@color/white"
                android:textSize="8sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/kategori_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="371dp"
                android:text="@string/kategori"
                android:textColor="@color/purple"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_ebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Ebook"
                android:backgroundTint="@color/white"
                android:layout_marginStart="35dp"
                android:layout_marginTop="410dp"
                android:drawableLeft="@drawable/baseline_library_books_24"
                android:drawableRight="@drawable/baseline_keyboard_arrow_right_24"
                android:padding="20dp"
                android:textSize="12sp"
                android:textColorHint="#8E97AA"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/button_komunitas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Comunty"
                android:backgroundTint="@color/white"
                android:layout_marginStart="215dp"
                android:layout_marginTop="410dp"
                android:drawableLeft="@drawable/baseline_chat_24"
                android:drawableRight="@drawable/baseline_keyboard_arrow_right_24"
                android:padding="20dp"
                android:textStyle="bold"
                android:textSize="12sp"
                android:textColorHint="#8E97AA"/>

            <Button
                android:id="@+id/button_artikel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Artikel"
                android:backgroundTint="@color/white"
                android:layout_marginStart="35dp"
                android:layout_marginTop="490dp"
                android:drawableLeft="@drawable/baseline_article_24"
                android:drawableRight="@drawable/baseline_keyboard_arrow_right_24"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:textSize="12sp"
                android:textColorHint="#8E97AA"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/button_quipper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Equipper"
                android:backgroundTint="@color/white"
                android:layout_marginStart="215dp"
                android:layout_marginTop="490dp"
                android:drawableLeft="@drawable/baseline_assignment_24"
                android:drawableRight="@drawable/baseline_keyboard_arrow_right_24"
                android:padding="20dp"
                android:textStyle="bold"
                android:drawablePadding="10dp"
                android:textSize="12sp"
                android:textColorHint="#8E97AA"/>

            <ImageView
                android:id="@+id/barudak"
                android:layout_width="120dp"
                android:layout_height="70dp"
                android:src="@drawable/img_3"
                android:layout_marginStart="10dp"
                android:layout_marginTop="580dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cerahkan"
                android:textSize="10sp"
                android:textColor="@color/blue"
                android:layout_gravity="center"
                android:layout_marginTop="225dp"
                android:layout_marginStart="15dp"
                android:textStyle="italic"
                android:textAlignment="textEnd"/>
            <Button
                android:id="@+id/button_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Share"
                android:textColor="@color/white"
                android:backgroundTint="#00ADB5"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="150dp"
                android:layout_marginTop="590dp"/>

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/buttom_navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="660dp"
                android:background="@color/blue"
                app:menu="@menu/buttom_menu"
                app:itemIconTint="@color/white"
                app:itemIconSize="30dp"
                app:itemTextColor="@color/white"/>

        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>